# mochi-phonebook-tutorial

./: CMakeLists.txt  README.md  initial-setup.json  spack.yaml
.github/: initial-setup.py
examples/: CMakeLists.txt  admin.cpp  bedrock-config.json  client.cpp  server.cpp
include/alpha/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  Exception.hpp  Provider.hpp  RequestResult.hpp  ResourceHandle.hpp  UUID.hpp
include/yp/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  Exception.hpp  PhonebookHandle.hpp  Provider.hpp  ProviderHandle.hpp  RequestResult.hpp  UUID.hpp
src/: Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  PhonebookHandle.cpp  PhonebookHandleImpl.hpp  Provider.cpp  ProviderImpl.hpp  yp-admin.pc.in  yp-client.pc.in  yp-config.cmake.in  yp-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  PhonebookTest.cpp
